--- a/Shares.ConsoleApp/Shares.ConsoleApp.csproj
+++ b/Shares.ConsoleApp/Shares.ConsoleApp.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\Shares.Library\Shares.Library.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+  <None Update="appsettings.json">
+     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
+
 </Project>
