--- a/Shares.ConsoleApp/appsettings.json
+++ b/Shares.ConsoleApp/appsettings.json
@@ -7,7 +7,7 @@
     },
     "Debug": { 
       "LogLevel": {
-        "Default": "Information" 
+        "Default": "Error" 
       }
     },
     "Console": {
